@@ -13,18 +13,20 @@
 package com.netflix.conductor.test.utils;
 
 import java.io.*;
-import java.net.URL;
+import java.nio.file.Files;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 
+import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Component;
 
-import com.netflix.conductor.common.metadata.tasks.TaskType;
 import com.netflix.conductor.common.metadata.workflow.SubWorkflowParams;
 import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
 import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
@@ -33,72 +35,58 @@ import com.netflix.conductor.common.utils.ExternalPayloadStorage;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import static com.netflix.conductor.common.metadata.tasks.TaskType.TASK_TYPE_SIMPLE;
+import static com.netflix.conductor.common.metadata.tasks.TaskType.TASK_TYPE_SUB_WORKFLOW;
+
+/** A {@link ExternalPayloadStorage} implementation that stores payload in file. */
 @ConditionalOnProperty(name = "conductor.external-payload-storage.type", havingValue = "mock")
 @Component
 public class MockExternalPayloadStorage implements ExternalPayloadStorage {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(MockExternalPayloadStorage.class);
 
-    public static final String INPUT_PAYLOAD_PATH = "payload/input";
-
-    public static final String INITIAL_WORKFLOW_INPUT_PATH = "workflow/input";
-    public static final String WORKFLOW_OUTPUT_PATH = "workflow/output";
-    public static final String TASK_OUTPUT_PATH = "task/output";
-    public static final String DYNAMIC_FORK_LARGE_PAYLOAD_PATH = "dynamic_fork_large_payload";
-
-    public static final String TEMP_FILE_PATH = "/input.json";
-
     private final ObjectMapper objectMapper;
+    private final File payloadDir;
 
     @Autowired
-    public MockExternalPayloadStorage(ObjectMapper objectMapper) {
+    public MockExternalPayloadStorage(ObjectMapper objectMapper) throws IOException {
         this.objectMapper = objectMapper;
-        LOGGER.info("Initialized {}", this.getClass().getCanonicalName());
+        this.payloadDir = Files.createTempDirectory("payloads").toFile();
+        LOGGER.info(
+                "{} initialized in directory: {}",
+                this.getClass().getSimpleName(),
+                payloadDir.getAbsolutePath());
     }
 
     @Override
     public ExternalStorageLocation getLocation(
             Operation operation, PayloadType payloadType, String path) {
         ExternalStorageLocation location = new ExternalStorageLocation();
-        location.setUri("http://some/uri");
-        switch (payloadType) {
-            case TASK_INPUT:
-            case WORKFLOW_INPUT:
-                location.setPath(INPUT_PAYLOAD_PATH);
-                break;
-            case WORKFLOW_OUTPUT:
-                location.setPath(WORKFLOW_OUTPUT_PATH);
-                break;
-            case TASK_OUTPUT:
-                location.setPath(TASK_OUTPUT_PATH);
-                break;
-        }
+        location.setPath(UUID.randomUUID() + ".json");
         return location;
     }
 
     @Override
     public void upload(String path, InputStream payload, long payloadSize) {
+        File file = new File(payloadDir, path);
+        String filePath = file.getAbsolutePath();
         try {
-            URL filePathURL = MockExternalPayloadStorage.class.getResource(TEMP_FILE_PATH);
-            File file = new File(filePathURL.toURI());
-            try (FileOutputStream outputStream = new FileOutputStream(file)) {
-                int read;
-                byte[] bytes = new byte[1024];
-                while ((read = payload.read(bytes)) != -1) {
-                    outputStream.write(bytes, 0, read);
-                }
-                outputStream.flush();
+            if (!file.exists() && file.createNewFile()) {
+                LOGGER.debug("Created file: {}", filePath);
             }
-        } catch (Exception e) {
+            IOUtils.copy(payload, new FileOutputStream(file));
+            LOGGER.debug("Written to {}", filePath);
+        } catch (IOException e) {
             // just handle this exception here and return empty map so that test will fail in case
             // this exception is thrown
+            LOGGER.error("Error writing to {}", filePath);
         } finally {
             try {
                 if (payload != null) {
                     payload.close();
                 }
             } catch (IOException e) {
-                LOGGER.warn("Unable to close inputstream when writing to file");
+                LOGGER.warn("Unable to close input stream when writing to file");
             }
         }
     }
@@ -106,58 +94,38 @@ public class MockExternalPayloadStorage implements ExternalPayloadStorage {
     @Override
     public InputStream download(String path) {
         try {
-            Map<String, Object> payload = getPayload(path);
-            String jsonString = objectMapper.writeValueAsString(payload);
-            return new ByteArrayInputStream(jsonString.getBytes());
+            LOGGER.debug("Reading from {}", path);
+            return new FileInputStream(new File(payloadDir, path));
         } catch (IOException e) {
+            LOGGER.error("Error reading {}", path, e);
             return null;
         }
     }
 
-    @SuppressWarnings("unchecked")
-    private Map<String, Object> getPayload(String path) {
-        Map<String, Object> stringObjectMap = new HashMap<>();
+    public void upload(String path, Map<String, Object> payload) {
         try {
-            switch (path) {
-                case INITIAL_WORKFLOW_INPUT_PATH:
-                    stringObjectMap.put("param1", "p1 value");
-                    stringObjectMap.put("param2", "p2 value");
-                    stringObjectMap.put("case", "two");
-                    return stringObjectMap;
-                case TASK_OUTPUT_PATH:
-                    InputStream opStream =
-                            MockExternalPayloadStorage.class.getResourceAsStream("/output.json");
-                    return objectMapper.readValue(opStream, Map.class);
-                case INPUT_PAYLOAD_PATH:
-                case WORKFLOW_OUTPUT_PATH:
-                    InputStream ipStream =
-                            MockExternalPayloadStorage.class.getResourceAsStream(TEMP_FILE_PATH);
-                    return objectMapper.readValue(ipStream, Map.class);
-                case DYNAMIC_FORK_LARGE_PAYLOAD_PATH:
-                    return curateDynamicForkLargePayload();
-                default:
-                    return objectMapper.readValue(
-                            MockExternalPayloadStorage.class.getResourceAsStream(path), Map.class);
-            }
+            InputStream bais = new ByteArrayInputStream(objectMapper.writeValueAsBytes(payload));
+            upload(path, bais, 0);
         } catch (IOException e) {
-            // just handle this exception here and return empty map so that test will fail in case
-            // this exception is thrown
+            LOGGER.error("Error serializing map to json", e);
         }
-        return stringObjectMap;
+    }
+
+    public InputStream readOutputDotJson() {
+        return MockExternalPayloadStorage.class.getResourceAsStream("/output.json");
     }
 
     @SuppressWarnings("unchecked")
-    private Map<String, Object> curateDynamicForkLargePayload() {
+    public Map<String, Object> curateDynamicForkLargePayload() {
         Map<String, Object> dynamicForkLargePayload = new HashMap<>();
         try {
-            InputStream inputStream =
-                    MockExternalPayloadStorage.class.getResourceAsStream("/output.json");
+            InputStream inputStream = readOutputDotJson();
             Map<String, Object> largePayload = objectMapper.readValue(inputStream, Map.class);
 
             WorkflowTask simpleWorkflowTask = new WorkflowTask();
             simpleWorkflowTask.setName("integration_task_10");
             simpleWorkflowTask.setTaskReferenceName("t10");
-            simpleWorkflowTask.setType(TaskType.SIMPLE.name());
+            simpleWorkflowTask.setType(TASK_TYPE_SIMPLE);
             simpleWorkflowTask.setInputParameters(
                     Collections.singletonMap("p1", "${workflow.input.imageType}"));
 
@@ -173,15 +141,14 @@ public class MockExternalPayloadStorage implements ExternalPayloadStorage {
 
             WorkflowTask subWorkflowTask = new WorkflowTask();
             subWorkflowTask.setName("large_payload_subworkflow");
-            subWorkflowTask.setType(TaskType.SUB_WORKFLOW.name());
+            subWorkflowTask.setType(TASK_TYPE_SUB_WORKFLOW);
             subWorkflowTask.setTaskReferenceName("large_payload_subworkflow");
             subWorkflowTask.setInputParameters(largePayload);
             subWorkflowTask.setSubWorkflowParam(subWorkflowParams);
 
-            dynamicForkLargePayload.put("dynamicTasks", Collections.singletonList(subWorkflowTask));
+            dynamicForkLargePayload.put("dynamicTasks", List.of(subWorkflowTask));
             dynamicForkLargePayload.put(
-                    "dynamicTasksInput",
-                    Collections.singletonMap("large_payload_subworkflow", largePayload));
+                    "dynamicTasksInput", Map.of("large_payload_subworkflow", largePayload));
         } catch (IOException e) {
             // just handle this exception here and return empty map so that test will fail in case
             // this exception is thrown
